[gd_scene load_steps=6 format=2]

[ext_resource path="res://EnterableBuilding.gd" type="Script" id=1]
[ext_resource path="res://Sprites/door_sprite.png" type="Texture" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=3]

[node name="EnterableBuilding" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
entrance = 2

[node name="BuildingFrame" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="EntranceArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )

[node name="CollisionShape" type="CollisionShape" parent="EntranceArea"]
transform = Transform( 0.7, 0, 0, 0, 1, 0, 0, 0, 0.7, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="EntranceArea"]
pixel_size = 0.001
texture = ExtResource( 2 )

[connection signal="body_entered" from="EntranceArea" to="." method="_on_EntranceArea_body_entered"]
[connection signal="body_exited" from="EntranceArea" to="." method="_on_EntranceArea_body_exited"]
